# jz

./: .gitignore  CMakeLists.txt  str.c  str.h  token.h  tokenizer.c  tokenizer.h  utf8_reader.c  utf8_reader.h  vec.h
include/jz/: attributes.h  lexer.h  string.h  token.h  value.h
src/: lexer-util.c  lexer.c  string.c  token.c
tests/: CMakeLists.txt  main.c  test.c  test.h  test_str.c  test_tokenizer.c
tests/lexer/: test_lexer.c
tests/string/: test_string.c
